<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:paddingStart="4dp"
    android:paddingTop="8dp"
    android:layout_height="wrap_content"
    tools:ignore="RtlSymmetry">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        style="@style/SecondaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/shift"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/appCompatSpinner"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:entries="@array/shift_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ok"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/appCompatSpinner"
        app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
