<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.applandeo.materialcalendarview.CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:type="one_day_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:firstDayOfWeek="monday"
        app:anotherMonthsDaysLabelsColor="#00FFFFFF"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:text="@string/go_to"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGoBack"
        app:layout_constraintWidth_percent="0.9" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintWidth_percent="0.9"
        android:id="@+id/btnGoBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_schedules"
        android:backgroundTint="@color/purple_200"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnCustomize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintWidth_percent="0.9"
        android:id="@+id/btnCustomize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/customize_schedule"
        android:backgroundTint="@color/purple_200"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
